# ChangeLog for x11-themes/baghira
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/baghira/ChangeLog,v 1.20 2004/11/28 21:59:42 centic Exp $

  28 Nov 2004; Dominik Stadler <centic@gentoo.org> baghira-0.4c.ebuild,
  baghira-0.4d.ebuild, baghira-0.5.ebuild, baghira-0.5a.ebuild,
  baghira-0.5h-r1.ebuild, baghira-0.5h.ebuild:
  Mark some versions stable on x86

*baghira-0.6 (12 Nov 2004)

  12 Nov 2004; Konstantin Arkhipov <voxus@gentoo.org> +baghira-0.6.ebuild,
  -baghira-0.3r.ebuild:
  Version bump, closing bug #70910.
  Dropped very old version.

  03 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> baghira-0.5h-r1.ebuild:
  ~alpha keyword.

*baghira-0.5h-r1 (07 Oct 2004)

  07 Oct 2004; Konstantin Arkhipov <voxus@gentoo.org> +baghira-0.5h-r1.ebuild,
  +files/baghira-ximian_fix.patch:
  Added patch, which prevents ximian's openoffice from crashing, when
  baghira style is used. Thanks to Mathew Hennessy <hennessy@thoughtcrime.com>
  for pointing to patch.

*baghira-0.5h (28 Sep 2004)

  28 Sep 2004; Konstantin Arkhipov <voxus@gentoo.org> +baghira-0.5h.ebuild,
  -baghira-0.5f.ebuild,
  -baghira-0.5d.ebuild:
  Version bump, closes #63904 and #65464.
  Tiny clean-up.

*baghira-0.5f (07 Sep 2004)

  07 Sep 2004; Konstantin Arkhipov <voxus@gentoo.org> +baghira-0.5f.ebuild:
  Version bump, closing #62999.

*baghira-0.5d (03 Sep 2004)

  03 Sep 2004; <plasmaroo@gentoo.org> +baghira-0.5d.ebuild:
  Version bump, closes bug #62426.

  30 Aug 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  baghira-0.3r.ebuild, baghira-0.4.ebuild, baghira-0.4c.ebuild,
  baghira-0.4d.ebuild, baghira-0.5.ebuild, baghira-0.5a.ebuild:
  Masked baghira-0.5a.ebuild stable for ppc

  30 Aug 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  baghira-0.3r.ebuild, baghira-0.4.ebuild, baghira-0.4c.ebuild,
  baghira-0.4d.ebuild, baghira-0.5.ebuild:
  Masked baghira-0.5.ebuild stable for ppc
