@@ -1,20 +1,20 @@
-MD5 ab25bd55807160cb93f206cf6111d66d baghira-0.5h.ebuild 551
-MD5 b2e7784b361056be21b93d3aeb7955a3 baghira-0.4d.ebuild 543
 MD5 571b64c8704667a3df5d58f1c67c2262 baghira-0.5.ebuild 542
+MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
+MD5 ab25bd55807160cb93f206cf6111d66d baghira-0.5h.ebuild 551
+MD5 524bfab46bdc4b14aefae0d1550cb67b ChangeLog 3917
+MD5 b2e7784b361056be21b93d3aeb7955a3 baghira-0.4d.ebuild 543
+MD5 d677954587c2e744d95f99465bc98ec7 baghira-0.5a.ebuild 550
 MD5 a87f0da48e99de5c2a2acba5b8b79396 baghira-0.5h-r1.ebuild 655
 MD5 9be2f8ddc7f5a67538e500c509c590f0 baghira-0.4c.ebuild 478
+MD5 c2569778cea8c32cc059c9e8a0922d9a baghira-0.6.ebuild 682
 MD5 774517f599c6894428daeae8e024a0ea baghira-0.4.ebuild 479
-MD5 23e38c1329bf8a64d337c0aeb34f00ac ChangeLog 3822
-MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
-MD5 d677954587c2e744d95f99465bc98ec7 baghira-0.5a.ebuild 550
-MD5 696a33c18289d55a037eace99920e2e9 baghira-0.6.ebuild 564
-MD5 8059cc03ed0b17d80519bc48e39fb0b2 files/digest-baghira-0.4c 65
-MD5 573be735a54a4d9105e1c947aa04063c files/digest-baghira-0.4d 65
-MD5 8cb20294cb456e1d964dea305c62d001 files/digest-baghira-0.5a 65
-MD5 691364364acad0a765bf32167748acb0 files/digest-baghira-0.5h 65
-MD5 4e0249b66e7688f90353f3a3fd4f3e19 files/digest-baghira-0.4 64
-MD5 e6be1454433cd6ccf91aa2190ab7a6aa files/digest-baghira-0.5 64
-MD5 b5731b1b1a55c04b91821bbbf39037b3 files/digest-baghira-0.6 64
 MD5 691364364acad0a765bf32167748acb0 files/digest-baghira-0.5h-r1 65
-MD5 96f7dee65dcd1e12c813b5e149ff5588 files/gcc34-baghira-03r.patch 1048
+MD5 573be735a54a4d9105e1c947aa04063c files/digest-baghira-0.4d 65
 MD5 eb9cfc658932affe09a33b70035d99fa files/baghira-ximian_fix.patch 1041
+MD5 e6be1454433cd6ccf91aa2190ab7a6aa files/digest-baghira-0.5 64
+MD5 691364364acad0a765bf32167748acb0 files/digest-baghira-0.5h 65
+MD5 96f7dee65dcd1e12c813b5e149ff5588 files/gcc34-baghira-03r.patch 1048
+MD5 4e0249b66e7688f90353f3a3fd4f3e19 files/digest-baghira-0.4 64
+MD5 8cb20294cb456e1d964dea305c62d001 files/digest-baghira-0.5a 65
+MD5 b5731b1b1a55c04b91821bbbf39037b3 files/digest-baghira-0.6 64
+MD5 8059cc03ed0b17d80519bc48e39fb0b2 files/digest-baghira-0.4c 65
